Changelog
=========

1.0.6 (unreleased)
------------------

- Allow regular GET and POST on elements (action elements make a redirect,
  other elements just return the result).
  [ebrehault]

- ``on_display`` event
  [ebrehault]

- Manager vew permissions on blocks
  [ebrehault]


1.0.5 (2016-04-09)
------------------

- Allow REST POST to element
  [simon-previdente]

- Raise compilation and execution errors
  [ebrehault]

- Support callable layout
  [ebrehault]

- Allow safe modules (datetime, random, time)
  [ebrehault]


1.0.4 (2016-03-02)
------------------

- No rendering on basic element to allow {elem.attr} or {elem[item]} in templates

- compute elements only once

- Fixes


1.0.3 (2016-01-06)
------------------

- Allow redirection after action, save, or delete
  [ebrehault]

- REST endpoint to compute a block element
  [ebrehault]


1.0.2 (2015-11-17)
------------------

- set_block() method
- fix datetime
- fix permissions


1.0.1 (2015-11-08)
------------------

- More pythonic access to record items


1.0 (2015-11-07)
----------------

- Initial release